# PolarsDataQualityDemo

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  dev.Dockerfile  pyproject.toml
extras/: decorators.py  read_write_delta.py
polars_data_quality_demo/: delta.py  ingestion.py
tests/: test_delta.py  test_ingestion.py
