[tool.poetry]
name = "polars_data_quality_demo"
version = "0.1.0"
description = ""
authors = ["Kacper Wojtasinski <k0wojtasinski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
polars = {extras = ["deltalake"], version = "^0.20.30"}


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
ruff = "^0.4.7"
faker = "^25.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
lint.select = [
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "E",   # pycodestyle error
    "F",   # pyflakes
    "I",   # isort
    "PIE", # flake8-pie
    "RUF", # Ruff-specific rules
    "UP",  # pyupgrade
    "W",   # pycodestyle warning
    "PT",  # flake8-pytest-style
    "PL",  # pylint
]

lint.ignore = [
    "PLR2004"
]